--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-responsive-carousel": "^3.2.23",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-search-box": "^2.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
